# deep-learning-from-scratch-3

./: README.md  pyproject.toml  pytest.ini
.github/workflows/: main.yml
dezero/: __init__.py  core.py  core_simple.py  functions.py  math_functions.py  utils.py
step/: first_stage.py  second_stage.py  step26.py  step27.py  step34.py  step35.py
tests/dezero/: test_dezero.py  test_functions.py  test_math_functions.py  test_utils.py
tests/step/: test_first_stage.py  test_second_stage.py
