[tool.poetry]
name = "y"
version = "0.1.0"
description = ""
authors = ["Schumi543 <12729148+Schumi543@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.7"
absl-py = "^0.9.0"
numpy = "^1.19.0"

[tool.poetry.dev-dependencies]
pytest = "^5.4.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
